# gog-games-browser

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/gog_browser/: __init__.py  config.py  discord_notify.py  gog_client.py  main.py  metadata.py  scan_flow.py  scanner.py  scheduler.py
src/gog_browser.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/gog_browser/web/: __init__.py  app.py  routes.py
src/gog_browser/web/static/: app.js  index.html  style.css
